Fixed warnings: unused methods, deprecated methods.